# calendar-generator

./: .gitignore  README.md  calendar.sty  data.csv  index.py  index.tex  index.tex.jinja  pyproject.toml  run.sh
app/: data.csv  main.py
app/compiler/: latex.py
app/core/: builder.py  events.py
app/models/: __init__.py
app/rendering/: renderer.py
src/: main.py
